# magicmerlin

./: .gitignore  CHANGELOG.md  CODEX_PHASE0.md  CODEX_PHASE1.md  CODEX_PHASE2.md  CODEX_PHASE3.md  CODEX_PHASE4.md  CODEX_PHASE5.md  CODEX_PHASE6_7.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  ENGINEERING_PLAN.md  GETTING_STARTED_PARITY.md  LICENSE  OPENCLAW_STRUCTURE_MAP.md  PLAN.md  README.md  SECURITY.md  SNAPSHOT_UPDATE.md
.github/workflows/: ci.yml
acp/: Cargo.toml
acp/src/: config.rs  lib.rs  runtime.rs
agent/: Cargo.toml
agent-tools/: Cargo.toml
agent-tools/src/: error.rs  lib.rs  process.rs  registry.rs  tools.rs
agent/src/: engine.rs  error.rs  heartbeat.rs  lib.rs  queue.rs  registry.rs  session.rs  system_prompt.rs
agent/tests/: turn_loop_integration.rs
auto-reply/: Cargo.toml
auto-reply/src/: lib.rs
channels/: Cargo.toml
channels/src/: lib.rs
channels/src/discord/: mod.rs
channels/src/framework/: bridge.rs  formatting.rs  health.rs  mod.rs  policy.rs  registry.rs  types.rs
channels/src/imessage/: mod.rs
channels/src/line/: mod.rs
channels/src/signal/: mod.rs
channels/src/slack/: mod.rs
channels/src/telegram/: mod.rs
channels/src/web/: mod.rs
channels/src/whatsapp/: mod.rs
cli/: Cargo.toml
cli/src/: main.rs
compat/: Cargo.toml  OPENCLAW_COMPATIBILITY_CONTRACT.md
compat/snapshots/: 2026-02-24_openclaw_cron_help.txt  2026-02-24_openclaw_help.txt  2026-02-24_openclaw_status.header.txt  2026-02-24_openclaw_status.json  2026-02-24_openclaw_version.txt  2026-02-24_runtime_tools_surface.md  2026-03-02_openclaw_cron_help.txt  2026-03-02_openclaw_help.txt  2026-03-02_openclaw_help_tree.json  2026-03-02_openclaw_status.header.txt  2026-03-02_openclaw_status.json  2026-03-02_openclaw_version.txt  manifest.json
compat/src/: lib.rs  providers.rs  snapshots.rs
compat/tests/: snapshots_load.rs
config/: Cargo.toml
config/src/: error.rs  lib.rs  model.rs  paths.rs  secrets.rs  security.rs
config/tests/: config_integration.rs
gateway/: Cargo.toml
gateway/src/: approvals.rs  lib.rs  main.rs  methods.rs  pairing.rs  plugins.rs  scheduler.rs  service.rs  sessions.rs
infra/: Cargo.toml
infra/src/: error.rs  http.rs  lib.rs  markdown.rs  text.rs  time.rs
logging/: Cargo.toml
logging/src/: error.rs  level.rs  lib.rs  rotate.rs
media/: Cargo.toml
media/src/: browser.rs  canvas.rs  lib.rs  links.rs  tts.rs  understanding.rs
parity/: README.md  docs_coverage.json  docs_coverage_summary.json  openclaw_docs_index.json  openclaw_llms_2026-03-02.txt  openclaw_llms_2026-03-03.txt
plugins/: Cargo.toml
plugins/src/: lib.rs  plugin.rs  registry.rs  skills.rs
providers/: Cargo.toml
providers/src/: auth.rs  error.rs  lib.rs  model_registry.rs  router.rs  types.rs
providers/src/providers/: anthropic.rs  deepseek.rs  google.rs  groq.rs  local.rs  minimax.rs  mistral.rs  mod.rs  moonshot.rs  openai.rs  openai_compat.rs  xai.rs
scripts/: capture_help_tree.sh  recapture_openclaw_snapshots.sh
sentinel/: Cargo.toml
sentinel/src/: main.rs
sessions/: Cargo.toml
sessions/src/: error.rs  lib.rs
storage/: Cargo.toml
storage/src/: db.rs  error.rs  lib.rs  locking.rs  memory.rs  transcript.rs
tools/: Cargo.toml
tools/src/: lib.rs
