[package]
name = "magicmerlin-agent"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["clock"] }
magicmerlin-config = { path = "../config" }
magicmerlin-infra = { path = "../infra" }
magicmerlin-providers = { path = "../providers" }
magicmerlin-storage = { path = "../storage" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["rt", "time", "sync", "fs"] }
rusqlite = "0.32"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
