[package]
name = "magicmerlin-channels"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[features]
default = ["telegram"]
telegram = []
discord = []
whatsapp = []
signal = []
slack = []
imessage = []
line = []
web = []

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["clock", "serde"] }
magicmerlin-auto-reply = { path = "../auto-reply" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["sync", "time"] }

reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
