[package]
name = "magicmerlin-gateway"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow = "1"
axum = "0.7"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

# Scheduler / cron
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
cron = "0.12"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.32" }

magicmerlin-compat = { path = "../compat" }
magicmerlin-tools = { path = "../tools" }
