[package]
name = "magicmerlin-media"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[features]
default = ["browser", "canvas", "tts", "media-understanding"]
browser = ["dep:tokio-tungstenite", "dep:futures-util", "dep:url"]
canvas = ["dep:axum"]
tts = []
media-understanding = []

[dependencies]
async-trait = "0.1"
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["rt", "sync", "process", "io-util", "time", "net"] }

# Optional subsystem deps
axum = { version = "0.7", optional = true }
futures-util = { version = "0.3", optional = true }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"], optional = true }
url = { version = "2", optional = true }

# Link understanding
scraper = "0.20"
html2md = "0.2"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
