[package]
name = "magicmerlin-media"
version = "0.0.0"
edition = "2021"
rust-version = "1.76"
license = "Apache-2.0"
authors = ["MagicMerlin contributors"]
repository = "(private)"

[features]
default = ["browser", "canvas", "tts", "media-understanding"]
browser = ["dep:url"]
canvas = ["dep:axum", "dep:futures-util"]
tts = []
media-understanding = []

[dependencies]
async-trait = "0.1"
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["rt", "sync", "process", "io-util", "time", "net", "fs"] }
tempfile = "3"

# Optional subsystem deps
axum = { version = "0.7", optional = true }
futures-util = { version = "0.3", optional = true }
url = { version = "2", optional = true }


[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[workspace]
