[package]
name = "magicmerlin-sentinel"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
url = "2"

magicmerlin-compat = { path = "../compat" }
magicmerlin-tools = { path = "../tools" }
magicmerlin-gateway = { path = "../gateway" }
