[package]
name = "magicmerlin-sessions"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["clock"] }
magicmerlin-storage = { path = "../storage" }
rusqlite = "0.32"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
