[package]
name = "magicmerlin-storage"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
chrono = "0.4"
r2d2 = "0.8"
r2d2_sqlite = "0.25"
rusqlite = "0.32"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

[dev-dependencies]
tempfile = "3"
